<resources>
    <string name="settings_tab_switching_sensitivity">Tab Switching Sensitivity</string>
    <string name="settings_category_gesture_sensitivity_title">Gesture Sensitivity</string>
    <string name="default_sensitivity">Default</string>
    <string name="low">Low</string>
    <string name="very_low">Very Low</string>
    <string name="default_swipe_area">Default</string>
    <string name="larger_swipe_area">Large</string>
    <string name="very_larger_swipe_area">Very Large</string>
    <string name="application_name" translatable="false">Infinity</string>
    <string name="login_activity_label">Login</string>
    <string name="search_activity_label" translatable="false"> </string>
    <string name="comment_activity_label">Send Comment</string>
    <string name="settings_override_video_autoplay_in_data_saving_mode_title">Autoplay videos in data saving mode</string>
    <string name="comment_activity_label_is_replying">Reply</string>
    <string name="post_text_activity_label">Text Post</string>
    <string name="contain_subreddits_hint">Contain subreddits (e.g. funny,AskReddit)</string>
    <string name="contain_users_hint">Contain users (e.g. Hostilenemy,random)</string>
    <string name="post_filter_contain_subreddits_explanation">Posts will be filtered out if they are not from the following subreddits.</string>
    <string name="post_filter_contain_users_explanation">Posts will be filtered out if they are not from the following users.</string>
    <string name="contain_subreddit">Contain this subreddit</string>
    <string name="contain_user">Contain this user</string>
    <string name="subreddit_selection_activity_label">Select a Subreddit</string>
    <string name="post_link_activity_label">Link Post</string>
    <string name="post_image_activity_label">Image Post</string>
    <string name="post_video_activity_label">Video Post</string>
    <string name="rules_activity_label">Rules</string>
    <string name="search_subreddits_activity_label">Subreddits</string>
    <string name="edit_post_activity_label">Edit Post</string>
    <string name="edit_comment_activity_label">Edit Comment</string>
    <string name="view_message_activity_label">Inbox</string>
    <string name="settings_activity_label">Settings</string>
    <string name="account_saved_thing_activity_label">Saved</string>
    <string name="create_multi_reddit_activity_label">Create Multireddit</string>
    <string name="subreddit_multiselection_activity_label">Select Subreddits</string>
    <string name="custom_theme_listing_activity_label">Custom Themes</string>
    <string name="customize_theme_activity_label">Customize Theme</string>
    <string name="customize_theme_activity_create_theme_label">Create Theme</string>
    <string name="theme_preview_activity_label">Theme Preview</string>
    <string name="edit_multi_reddit_activity_label">Edit Multireddit</string>
    <string name="selected_subeddits_activity_label">Selected Subreddits</string>
    <string name="report_activity_label">Report</string>
    <string name="view_imgur_media_activity_image_label">Image %1$d/%2$d</string>
    <string name="view_imgur_media_activity_video_label">Video %1$d/%2$d</string>
    <string name="send_private_message_activity_label">Send PM</string>
    <string name="view_reddit_gallery_activity_image_label">Image %1$d/%2$d</string>
    <string name="view_reddit_gallery_activity_gif_label">Gif %1$d/%2$d</string>
    <string name="view_reddit_gallery_activity_video_label">Video %1$d/%2$d</string>
    <string name="submit_crosspost_activity_label">Crosspost</string>
    <string name="give_award_activity_label">Give Award</string>
    <string name="subreddit_filter_popular_and_all_activity_label">r/all and r/popular</string>
    <string name="customize_post_filter_activity_label">Customize Post Filter</string>
    <string name="filtered_posts_activity_subtitle">Filtered Posts</string>
    <string name="offline_posts_activity_label">Offline Posts</string>
    <string name="post_filter_preference_activity_label">Post Filter</string>
    <string name="search_users_result_activity_label">Users</string>
    <string name="multireddit_selection_activity_label">Select a Multireddit</string>
    <string name="post_gallery_activity_label">Gallery Post</string>
    <string name="wiki_activity_label">Wiki</string>
    <string name="edit_profile_activity_label">Edit Profile</string>
    <string name="post_poll_activity_label">Poll Post</string>
    <string name="history_activity_label">History</string>
    <string name="subscription_activity_label">Subscription</string>
    <string name="comment_filter_preference_activity_label">Comment Filter</string>
    <string name="customize_comment_filter_activity_label">Customize Comment Filter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_download">Download</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_comment">Add a comment</string>
    <string name="action_save_post">Save post</string>
    <string name="nsfw">Sensitive</string>
    <string name="settings_notification_master_title">Notification</string>
    <string name="settings_notification_enable_notification_title">Enable Notifications</string>
    <string name="settings_notification_interval_title">Check Notifications Interval</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_amoled_dark_title">Amoled Dark</string>
    <string name="settings_interface_title">Interface</string>
    <string name="settings_gestures_and_buttons_title">Gestures &amp; Buttons</string>
    <string name="settigns_video_title">Video</string>
    <string name="settings_preview_font_title">Font Preview</string>
    <string name="settings_font_summary">Font</string>
    <string name="settings_title_font_summary">Title</string>
    <string name="settings_content_font_summary">Content</string>
    <string name="settings_font_family_title">Font Family</string>
    <string name="settings_title_font_family_title">Title Font Family</string>
    <string name="settings_content_font_family_title">Content Font Family</string>
    <string name="settings_font_size_title">Font Size</string>
    <string name="settings_title_font_size_title">Title Font Size</string>
    <string name="settings_content_font_size_title">Content Font Size</string>
    <string name="settings_over_18_and_spoiler_title">Content Sensitivity Filter</string>
    <string name="settings_about_master_title">About</string>
    <string name="settings_acknowledgement_master_title">Acknowledgement</string>
    <string name="settings_credits_master_title">Credits</string>
    <string name="settings_open_source_title">Open Source</string>
    <string name="settings_open_source_summary">Star it on Github if you like this app</string>
    <string name="settings_rate_title">Rate on Google Play</string>
    <string name="settings_rate_summary">Give me a 5-star rating and I will be really happy</string>
    <string name="settings_email_title">Email</string>
    <string name="settings_email_summary">docilealligator.app@gmail.com</string>
    <string name="settings_reddit_account_title">Reddit Account</string>
    <string name="settings_reddit_account_summary">u/Hostilenemy</string>
    <string name="settings_subreddit_title">Subreddit</string>
    <string name="settings_subreddit_summary">r/Infinity_For_Reddit</string>
    <string name="settings_share_title">Share</string>
    <string name="settings_share_summary">Share this app to other people if you enjoy it</string>
    <string name="settings_privacy_policy_title">Privacy Policy</string>
    <string name="settings_version_title">Infinity For Reddit</string>
    <string name="settings_version_summary">Version %s</string>
    <string name="settings_category_customization_title">Customization</string>
    <string name="settings_customize_light_theme_title">Light Theme</string>
    <string name="settings_customize_dark_theme_title">Dark Theme</string>
    <string name="settings_customize_amoled_theme_title">Amoled Theme</string>
    <string name="settings_manage_themes_title">Manage Themes</string>
    <string name="settings_category_material_you_title">Material You</string>
    <string name="settings_enable_material_you_warning_summary">Make sure you don\'t have themes named\n"Material You",\n"Material You Dark" or\n"Material You Amoled".\nOtherwise, rename them before enabling Material You.</string>
    <string name="settings_enable_material_you_title">Enable Material You</string>
    <string name="settings_enable_material_you_summary">Personalize Infinity based on Your Wallpaper</string>
    <string name="settings_apply_material_you_title">Apply Material You</string>
    <string name="settings_apply_material_you_summary">In case Infinity did not change the theme</string>
    <string name="settings_advanced_master_title">Advanced</string>
    <string name="restart_app_see_changes">Restart the app to see the changes</string>
    <string name="settings_download_location_title">Download Location</string>
    <string name="settings_image_download_location_title">Image Download Location</string>
    <string name="settings_gif_download_location_title">Gif Download Location</string>
    <string name="settings_video_download_location_title">Video Download Location</string>
    <string name="settings_separate_folder_for_each_subreddit">Separate Folder for Each Subreddit</string>
    <string name="settings_save_nsfw_media_in_different_folder_title">Save Sensitive Media in Different Location</string>
    <string name="settings_nsfw_download_location_title">Sensitive Download Location</string>
    <string name="settings_security_title">Security</string>
    <string name="settings_data_saving_mode">Data Saving Mode</string>
    <string name="settings_translation_title">Translation</string>
    <string name="settings_translation_summary">Translate this app on POEditor. Thanks to all contributors.</string>
    <string name="settings_miscellaneous_title">Miscellaneous</string>
    <string name="settings_post_filter_title">Post Filter</string>
    <string name="settings_post_history_title">Post History</string>
    <string name="settings_sort_type_title">Sort Type</string>
    <string name="settings_custom_font_family_title">Custom Font Family</string>
    <string name="settings_custom_title_font_family_title">Custom Title Font Family</string>
    <string name="settings_custom_content_font_family_title">Custom Content Font Family</string>
    <string name="settings_reddit_user_agreement_title">Reddit User Agreement</string>
    <string name="settings_comment_filter_title">Comment Filter</string>
    <string name="settings_proxy_title">Proxy</string>
    <string name="settings_proxy_enabled">Proxy Enabled</string>
    <string name="settings_proxy_type">Proxy Type</string>
    <string name="settings_proxy_hostname">Hostname</string>
    <string name="settings_proxy_port">Port</string>
    <string name="settings_proxy_actual_ip">Actual IP</string>
    <string name="settings_proxy_proxy_ip">Proxy IP</string>
    <string name="settings_proxy_actual_location">Actual Location</string>
    <string name="settings_proxy_proxy_location">Proxy Location</string>
    <string name="settings_proxy_connection_status">Proxy Connection Status</string>
    <string name="settings_proxy_connection_status_reddit">Reddit Connection Status</string>
    <string name="settings_proxy_status_fetching">Fetching...</string>
    <string name="live_activity">Live Activity</string>
    <string name="enable_live_activity">Enable Live Activity</string>
    <string name="live_activity_refresh_interval">Live Activity Refresh Interval</string>
    <string name="live_activity_follow_duration">Live Activity Follow Duration</string>
</resources>