<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.meilluer.infinity.customviews.preference.CustomFontPreference
        app:title="@string/settings_acknowledgement_master_title"
        app:fragment="com.meilluer.infinity.settings.AcknowledgementFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreference
        app:title="@string/settings_credits_master_title"
        app:fragment="com.meilluer.infinity.settings.CreditsPreferenceFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreference
        android:key="translation"
        app:title="@string/settings_translation_title"
        app:summary="@string/settings_translation_summary"
        app:fragment="com.meilluer.infinity.settings.TranslationFragment"/>

    <com.meilluer.infinity.customviews.preference.CustomFontPreference
        android:key="open_source"
        app:title="@string/settings_open_source_title"
        app:summary="@string/settings_open_source_summary" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreference
        android:key="rate"
        app:title="@string/settings_rate_title"
        app:summary="@string/settings_rate_summary" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreference
        android:key="email"
        app:title="@string/settings_email_title"
        app:summary="@string/settings_email_summary" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreference
        android:key="reddit_account"
        app:title="@string/settings_reddit_account_title"
        app:summary="@string/settings_reddit_account_summary" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreference
        android:key="subreddit"
        app:title="@string/settings_subreddit_title"
        app:summary="@string/settings_subreddit_summary" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreference
        android:key="share"
        app:title="@string/settings_share_title"
        app:summary="@string/settings_share_summary" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreference
        android:key="version"
        app:title="@string/settings_version_title"
        app:summary="@string/settings_version_summary" />

</PreferenceScreen>
