<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.meilluer.infinity.customviews.preference.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="proxy_enabled"
        app:title="@string/settings_proxy_enabled"
        app:summary="@string/restart_app_see_changes" />

    <com.meilluer.infinity.customviews.preference.CustomFontListPreference
        app:defaultValue="HTTP"
        app:entries="@array/settings_proxy_type"
        app:entryValues="@array/settings_proxy_type_values"
        app:key="proxy_type"
        app:title="@string/settings_proxy_type"
        app:useSimpleSummaryProvider="true" />

    <com.meilluer.infinity.customviews.preference.CustomFontEditTextPreference
        app:defaultValue="127.0.0.1"
        app:key="proxy_hostname"
        app:title="@string/settings_proxy_hostname"
        app:useSimpleSummaryProvider="true" />

    <com.meilluer.infinity.customviews.preference.CustomFontEditTextPreference
        app:defaultValue="1080"
        app:key="proxy_port"
        app:title="@string/settings_proxy_port"
        app:useSimpleSummaryProvider="true" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceCategory
        app:title="@string/settings_proxy_connection_status">

        <com.meilluer.infinity.customviews.preference.CustomFontPreference
            app:key="proxy_actual_ip"
            app:title="@string/settings_proxy_actual_ip"
            app:summary="@string/settings_proxy_status_fetching" />

        <com.meilluer.infinity.customviews.preference.CustomFontPreference
            app:key="proxy_proxy_ip"
            app:title="@string/settings_proxy_proxy_ip"
            app:summary="@string/settings_proxy_status_fetching" />

        <com.meilluer.infinity.customviews.preference.CustomFontPreference
            app:key="proxy_actual_location"
            app:title="@string/settings_proxy_actual_location"
            app:summary="@string/settings_proxy_status_fetching" />

        <com.meilluer.infinity.customviews.preference.CustomFontPreference
            app:key="proxy_proxy_location"
            app:title="@string/settings_proxy_proxy_location"
            app:summary="@string/settings_proxy_status_fetching" />

        <com.meilluer.infinity.customviews.preference.CustomFontPreference
            app:key="proxy_reddit_connection_status"
            app:title="@string/settings_proxy_connection_status_reddit"
            app:summary="@string/settings_proxy_status_fetching" />

    </com.meilluer.infinity.customviews.preference.CustomFontPreferenceCategory>

</PreferenceScreen>