<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.meilluer.infinity.customviews.preference.CustomFontPreference
        app:title="@string/settings_preview_font_title"
        app:fragment="com.meilluer.infinity.settings.FontPreviewFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceCategory
        app:title="@string/settings_font_summary" />

    <com.meilluer.infinity.customviews.preference.CustomFontListPreference
        app:defaultValue="Default"
        android:entries="@array/settings_font_family"
        app:entryValues="@array/settings_font_family_values"
        app:key="font_family"
        app:title="@string/settings_font_family_title"
        app:useSimpleSummaryProvider="true" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreference
        app:title="@string/settings_custom_font_family_title"
        app:key="custom_font_family"
        app:isPreferenceVisible="false" />

    <com.meilluer.infinity.customviews.preference.CustomFontListPreference
        app:defaultValue="Normal"
        android:entries="@array/settings_font_size"
        app:entryValues="@array/settings_font_size_values"
        app:key="font_size"
        app:title="@string/settings_font_size_title"
        app:useSimpleSummaryProvider="true" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceCategory
        app:title="@string/settings_title_font_summary" />

    <com.meilluer.infinity.customviews.preference.CustomFontListPreference
        app:defaultValue="Default"
        android:entries="@array/settings_font_family"
        app:entryValues="@array/settings_font_family_values"
        app:key="title_font_family"
        app:title="@string/settings_title_font_family_title"
        app:useSimpleSummaryProvider="true" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreference
        app:title="@string/settings_custom_title_font_family_title"
        app:key="custom_title_font_family"
        app:isPreferenceVisible="false" />

    <com.meilluer.infinity.customviews.preference.CustomFontListPreference
        app:defaultValue="Normal"
        android:entries="@array/settings_title_font_size"
        app:entryValues="@array/settings_title_font_size_values"
        app:key="title_font_size"
        app:title="@string/settings_title_font_size_title"
        app:useSimpleSummaryProvider="true" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceCategory
        app:title="@string/settings_content_font_summary" />

    <com.meilluer.infinity.customviews.preference.CustomFontListPreference
        app:defaultValue="Default"
        android:entries="@array/settings_font_family"
        app:entryValues="@array/settings_font_family_values"
        app:key="content_font_family"
        app:title="@string/settings_content_font_family_title"
        app:useSimpleSummaryProvider="true" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreference
        app:title="@string/settings_custom_content_font_family_title"
        app:key="custom_content_font_family"
        app:isPreferenceVisible="false" />

    <com.meilluer.infinity.customviews.preference.CustomFontListPreference
        app:defaultValue="Normal"
        android:entries="@array/settings_content_font_size"
        app:entryValues="@array/settings_content_font_size_values"
        app:key="content_font_size"
        app:title="@string/settings_content_font_size_title"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>