<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        app:icon="@drawable/ic_notifications_day_night_24dp"
        app:title="@string/settings_notification_master_title"
        app:top="true"
        app:fragment="com.meilluer.infinity.settings.NotificationPreferenceFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        app:icon="@drawable/ic_interface_day_night_24dp"
        app:title="@string/settings_interface_title"
        app:fragment="com.meilluer.infinity.settings.InterfacePreferenceFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        app:title="@string/settings_theme_title"
        app:icon="@drawable/ic_color_lens_day_night_24dp"
        app:fragment="com.meilluer.infinity.settings.ThemePreferenceFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        app:title="@string/settigns_video_title"
        android:icon="@drawable/ic_video_day_night_24dp"
        app:fragment="com.meilluer.infinity.settings.VideoPreferenceFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        app:icon="@drawable/ic_gesture_day_night_24dp"
        app:title="@string/settings_gestures_and_buttons_title"
        app:bottom="true"
        app:fragment="com.meilluer.infinity.settings.GesturesAndButtonsPreferenceFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        app:key="security"
        app:title="@string/settings_security_title"
        app:icon="@drawable/ic_security_day_night_24dp"
        app:top="true"
        app:fragment="com.meilluer.infinity.settings.SecurityPreferenceFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        android:key="data_saving_mode_preference"
        app:title="@string/settings_data_saving_mode"
        app:icon="@drawable/ic_data_saving_mode_day_night_24dp"
        app:fragment="com.meilluer.infinity.settings.DataSavingModePreferenceFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        app:icon="@drawable/ic_call_split_24"
        app:title="@string/settings_proxy_title"
        app:bottom="true"
        app:fragment="com.meilluer.infinity.settings.ProxyPreferenceFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        app:icon="@drawable/ic_history_day_night_24dp"
        android:title="@string/settings_post_history_title"
        app:top="true"
        app:fragment="com.meilluer.infinity.settings.PostHistoryFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        app:icon="@drawable/ic_nsfw_on_day_night_24dp"
        app:title="@string/settings_over_18_and_spoiler_title"
        app:fragment="com.meilluer.infinity.settings.NsfwAndSpoilerFragment"/>

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        app:key="post_filter"
        app:icon="@drawable/ic_filter_day_night_24dp"
        app:title="@string/settings_post_filter_title" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        app:key="comment_filter"
        app:icon="@drawable/ic_filter_day_night_24dp"
        app:title="@string/settings_comment_filter_title"
        app:bottom="true" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        app:icon="@drawable/ic_sort_day_night_24dp"
        app:title="@string/settings_sort_type_title"
        app:top="true"
        app:fragment="com.meilluer.infinity.settings.SortTypePreferenceFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        app:title="@string/settings_download_location_title"
        android:icon="@drawable/ic_download_day_night_24dp"
        app:fragment="com.meilluer.infinity.settings.DownloadLocationPreferenceFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        app:icon="@drawable/ic_miscellaneous_day_night_24dp"
        app:title="@string/settings_miscellaneous_title"
        app:fragment="com.meilluer.infinity.settings.MiscellaneousPreferenceFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        app:icon="@drawable/ic_security_day_night_24dp"
        app:title="API Keys"
        app:fragment="com.meilluer.infinity.settings.ApiKeysPreferenceFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        android:icon="@drawable/ic_advanced_day_night_24dp"
        app:title="@string/settings_advanced_master_title"
        app:bottom="true"
        app:fragment="com.meilluer.infinity.settings.AdvancedPreferenceFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        android:icon="@drawable/ic_about_day_night_24dp"
        app:title="@string/settings_about_master_title"
        app:top="true"
        app:fragment="com.meilluer.infinity.settings.AboutPreferenceFragment" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        android:key="privacy_policy"
        app:icon="@drawable/ic_privacy_policy_day_night_24dp"
        app:title="@string/settings_privacy_policy_title" />

    <com.meilluer.infinity.customviews.preference.CustomFontPreferenceWithBackground
        android:key="reddit_user_agreement"
        app:icon="@drawable/ic_user_agreement_day_night_24dp"
        app:title="@string/settings_reddit_user_agreement_title"
        app:bottom="true" />

</androidx.preference.PreferenceScreen>